styles/base.css
:root{
    --heading: "Playfair", sans-serif;
    --paragraph: "Oswald", sans-serif;
    --text-color: #011526;
    --secondary-color: #013440;
    --nav-color:#2F6C73;
    --tertiary-color: #548c8c;
    --background-color: #BEBFBD;;
}
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body{
    font-family: var(--paragraph);
    max-width: 1200px;
    margin: 0 auto;
    background-color: var(--background-color);
    color: var(--text-color);
}

main section ul{
    list-style-type: none;
}
h1,h2,h3,h4,h5,h6{
    font-family: var(--heading);
}
a:visited{
    color: var(--text-color);
}
nav{
    font-weight: bolder;
    text-align: center;
    background-color: var(--nav-color);
}
nav ul{
    list-style-type: none;
}
nav a, footer{
    display: block;
    text-align: center;
    padding:1.5rem;
    text-decoration:none;
}
nav a:hover{
    background-color: var(--tertiary-color);
}

footer{
    background-color: var(--nav-color);
    font-weight: bolder;
    text-align: center;
}

